@@ -646,7 +646,8 @@ int igraph_establishment_game(igraph_t *graph, igraph_integer_t nodes,
 			      igraph_matrix_t *pref_matrix,
 			      igraph_bool_t directed);
 int igraph_grg_game(igraph_t *graph, igraph_integer_t nodes,
-		    igraph_real_t radius, igraph_bool_t torus);
+		    igraph_real_t radius, igraph_bool_t torus,
+		    igraph_vector_t *x, igraph_vector_t *y);
 int igraph_preference_game(igraph_t *graph, igraph_integer_t nodes,
 			   igraph_integer_t types, igraph_vector_t *type_dist,
 			   igraph_matrix_t *pref_matrix,
